minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-ingress
  namespace: dnd
  labels:
    app.kubernetes.io/name: dnd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dnd.local
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: gateway-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /socket.io
        backend:
          service:
            name: gateway-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vue-service
            port: 
              number: 80
